ubuntu-dev-tools (0.108) UNRELEASED; urgency=low

  [ Stefano Rivera ]
  * lp-shell, import-bug-from-debian:
    Use the 'production' LP instance instead of 'edge' (which is going away).
  * pbuilder-dist: Fix typo in local archive support, introduced in 0.107.

  [ Benjamin Drung ]
  * pull-lp-source: Unquote URI to get "+" instead of "%2B" in the file name
    (LP: #681114).

  [ Colin Watson ]
  * grep-merges: New tool.

  [ Evan Broder ]
  * backportpackage: new script for testing backport requests in a PPA.
  * sponsor-patch: Add --update option to make sure build environment is
    up to date (LP: #689605)

  [ Bilal Akhtar ]
  * pbuilder-dist: Override the default build result location if
    --buildresult is specified.
  * sponsor-patch: Support building with pbuilder-dist.

 -- Benjamin Drung <bdrung@ubuntu.com>  Thu, 16 Dec 2010 23:40:14 +0100

ubuntu-dev-tools (0.107) experimental; urgency=low

  [ Stefano Rivera ]
  * edit-patch: Detect quilt patch-system in 3.0 (quilt) packages without any
    patches yet.
  * wrap-and-sort:
    - Correct typo in options --wrap-allways -> --wrap-always
    - Sort debian/install as well as debian/*.install
    - Add one-space-indentation option: --short-indent
    - Remove null-entry from trailing comma in sorted lists
    - Add configurable debian directory location
    - Sort Architecture (LP: #681131)
    - Add --sort-binary-packages and --keep-first (LP: #681119)
  * grab-merge, syncpackage: Export DEB_VENDOR=Ubuntu when unpacking source
    packages. 3.0 (quilt) has optional per-vendor patch series.
  * pbuilder-dist:
    - Refactor to use subprocess.popen instead of os.system (LP: #398974)
    - Catch OSErrors when creating directories (LP: #671067)
    - Set HOME so pbuilder reads .pbuilderrc
    - Add bidirectional workarounds for LP: #599695 (pbuilder uses the host
      apt keyring). Complain if the target's keyring isn't installed.
  * Use dpkg-vendor in ubuntutools.misc.system_distribution(), cache result.
