@@ -8,6 +8,7 @@ ubuntu-dev-tools (0.108) UNRELEASED; urgency=low
   [ Benjamin Drung ]
   * pull-lp-source: Unquote URI to get "+" instead of "%2B" in the file name
     (LP: #681114).
+  * sponsor-patch: Allow updating the build environment if the build failed.
 
   [ Colin Watson ]
   * grep-merges: New tool.
@@ -22,7 +23,7 @@ ubuntu-dev-tools (0.108) UNRELEASED; urgency=low
     --buildresult is specified.
   * sponsor-patch: Support building with pbuilder-dist.
 
- -- Benjamin Drung <bdrung@ubuntu.com>  Thu, 16 Dec 2010 23:40:14 +0100
+ -- Benjamin Drung <bdrung@ubuntu.com>  Fri, 17 Dec 2010 22:47:30 +0100
 
 ubuntu-dev-tools (0.107) experimental; urgency=low
 
